syntax = "proto3";

package geospatial;

import "geospatial.proto";
import "files.proto";

// Aggregated service combining all RPC methods from different domains
service GeospatialService {
  // Basic services (from geospatial.proto)
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse);
  rpc EchoParameter(EchoParameterRequest) returns (EchoParameterResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Geospatial data methods (from geospatial.proto)
  rpc GetFeatures(GetFeaturesRequest) returns (GetFeaturesResponse);
  rpc GetBatchDataStreamed(GetBatchDataRequest) returns (stream GetBatchDataChunk);
  
  // New columnar format for efficient large dataset processing
  rpc GetBatchDataColumnar(GetBatchDataRequest) returns (GetBatchDataColumnarResponse);
  rpc GetBatchDataColumnarStreamed(GetBatchDataRequest) returns (stream ColumnarDataChunk);
  
  // CSV file processing methods (from files.proto)
  rpc AnalyzeCsv(AnalyzeCsvRequest) returns (AnalyzeCsvResponse);
  rpc SendFile(SendFileRequest) returns (SendFileResponse);
  rpc GetLoadedDataStats(GetLoadedDataStatsRequest) returns (GetLoadedDataStatsResponse);
  rpc GetLoadedDataChunk(GetLoadedDataChunkRequest) returns (GetLoadedDataChunkResponse);
}
